# melody-angel

./: .Rbuildignore  .Rprofile  .env-example  .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  DESCRIPTION  LICENSE  LICENSE.md  README.md  makefile  pyproject.toml  requirements.txt  setup.R  sourcery.yml
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
R/: binary classification using real world data.R  graph_demo.R  hill_heights.R  linear classification gone wrong.R  linear_classification.R  linear_regression.R  plymouth_demo.R  simple_dense_layer.R
data/processed/: hill_heights.csv
data/raw/: Waypoints_03-JUL-23.gpx  plymouth.csv
python_src/: make_datasets.py
python_src/handlers/: hill_heights.py  hill_heights.xslt
python_src/models/: hill_height_point.py
reports/: demo.rmd  graph_demo.qmd  hill_heights.Rmd  hill_heights.qmd  plymouth_demo.Rmd
src/: lib.rs  resistor_color.rs  say_hello.rs  sublist.rs
tests/: health_statistics.rs  resistor_color.rs  say_hello.rs  short_fibonacci.rs  sublist.rs  testthat.R
tests/pytest/: dummy_test.py
