[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "melody_angel"
version = "0.1.0"
authors = [
  { name="Joe Collins", email="joejcollins@gmail.com" },
]
description = "R Learnings."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "black",  # uncompromising Python code formatter.
    "debugpy",  # only required for debugging, not needed for production.
    "flake8",  # linting for Python for VS Code to use.
    "gpxpy",  # for parsing GPX files.
    "mypy",  # optional static type checker for Python.
    "pip-tools", # used to manage requirements.txt.
    "pydantic",  # for validating the raw data.
    "pytest",  # used for testing, not needed for production.
    "radian",  # enhances the experience of using R in VS Code.
    "ruff",  # for fast linting of python.
    "OSGridConverter"  # for the demonstration.
]

[project.urls]
"homepage" = "https://github.com/joejcollins/melody-angel"
"repository" = "https://github.com/joejcollins/melody-angel"
"documentation" = "https://github.com/joejcollins/melody-angel"


[tool.setuptools]
py-modules = [
    "python_src",
    "pytest"
]  #  Disable auto discovery of modules (and only include the ones we specifically want).

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    |\.git
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.pyright]
exclude = ["**/node_modules",
    "**/__pycache__"
]
reportMissingImports = true
reportMissingTypeStubs = true
pythonVersion = "3.10"
pythonPlatform = "Linux"

[tool.ruff]
target-version = "py39"
exclude = [
    ".git",
    ".github",
    ".pytest_cache",
    ".venv",
    ".vscode",
    "__pycache__"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q --disable-warnings --cache-clear"
testpaths = [
    "./tests/pytest"
]